--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Compteur de clics</title>
   <link rel="stylesheet" href="style.css">
-  <script src="scripts/script.js" defer></script>
+  <script src="script.js" defer></script>
 </head>
 <body>
 
@@ -19,7 +19,6 @@
       <button id="reset">🔄 Réinitialiser</button>
     </div>
   </div>
-
 
 </body>
 </html>
